fix: update deps

--- a/index.html
+++ b/index.html
@@ -507,11 +507,30 @@ h4 > .fa {
 
             <h4 id="about"> <span class="fa fa-lg fa-user"></span> <span class="title">A propos de moi</span> </h4>
             <div class="card-nested" itemprop="description">
-              <p> Passioné par la programmation depuis l&#x27;adoléscence, j&#x27;ai commencé à programmé sur une vielle calculatrice SHARP EL-5500 de mon père avec le language Basic. J&#x27;ai par la suite décidé de suivre une école d&#x27;informatique pour approfondir mes connaissance et pouvoir vivre de cette passion. Je travaille aujourd&#x27;hui comme dévéloppeur Javascript assicié à d&#x27;autres techologies selon les besoin. J&#x27;ai une expérience très riche avec React, React Native, Node.js, Elixir, Objective C et Java ou Python. J&#x27;utilise au quotidien plusieurs outils et technologie d&#x27;intégration continu et de devops comme Docker, Gitlab Ci ou Jenkins. </p>
+              <p> Passioné par la programmation depuis l&#x27;adoléscence, j&#x27;ai commencé à programmer sur une vielle calculatrice SHARP EL-5500 de mon père avec le language Basic. J&#x27;ai par la suite décidé de suivre une école d&#x27;informatique pour approfondir mes connaissance et pouvoir vivre de cette passion. Je travaille aujourd&#x27;hui comme dévéloppeur Javascript ainsi que d&#x27;autres techologies selon les besoins. J&#x27;ai une expérience très riche avec React, React Native, Node.js, Elixir, Objective C et Java ou Python. J&#x27;utilise au quotidien plusieurs outils et technologie d&#x27;intégration continu et de devops comme Docker, Gitlab Ci ou Jenkins. </p>
             </div>
 
             <h4 id="work-experience"> <span class="fa fa-lg fa-pencil-square-o"></span> <span class="title">Experience</span> </h4>
             <ul class="list-unstyled">
+                <li class="card-nested">
+                  <div class="content has-sidebar">
+                    <p class="clear-margin-sm">
+                      <strong>Software engineer</strong>,
+                      <a href="https://alkemics.com" target="_blank">Alkemics</a>
+                    </p>
+                    <p class="text-muted">
+                      <small>
+                        <span class="space-right"> Oct 2020 -  Present  </span>
+                         <span> <i class="fa fa-clock-o icon-left"></i> 8 mois </span> 
+                      </small>
+                    </p>
+                    <p>Alkemics est une plateforme d&#x27;echange de données et de collaboration entre producteurs et distributeurs.</p>
+                      <ul>
+                          <li> Stack: React, Python, Go, MySQL, Elastic Search </li>
+                      </ul>
+                  </div>
+
+                </li>
                 <li class="card-nested">
                   <div class="content has-sidebar">
                     <p class="clear-margin-sm">
@@ -520,8 +539,8 @@ h4 > .fa {
                     </p>
                     <p class="text-muted">
                       <small>
-                        <span class="space-right"> Jan 2018 -  Present  </span>
-                         <span> <i class="fa fa-clock-o icon-left"></i> 3 ans </span> 
+                        <span class="space-right"> Jan 2018 -  Oct 2020  </span>
+                         <span> <i class="fa fa-clock-o icon-left"></i> 2 ans 8 mois </span> 
                       </small>
                     </p>
                     <p>INEAT est une société de service informatique dans laquelle j&#x27;interviens sur des projets Javascript</p>
