fix: update genrated

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mika ANDRIANARIJAONA</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link href='//fonts.googleapis.com/css?family=Lato:400,500,600,700|Open+Sans:400,500,600,700' rel='stylesheet' type='text/css'>
     <style>
@@ -139,6 +139,14 @@ body {
 .social-link .fa {
   text-align: center;
   width: 2em;
+}
+.fa-gitlab {
+  color: #FC6D27;
+}
+.fa-gitlab:hover,
+.fa-gitlab:focus {
+  text-decoration: none;
+  color:  #FCA326;
 }
 .fa-github {
   color: #454545;
@@ -443,7 +451,7 @@ h4 > .fa {
                 <div class="contact-details">
                   <div class="name-and-profession">
                     <h3 class="text-bolder name" itemprop="name"> Mika ANDRIANARIJAONA</h3>
-                    <h5 class="text-muted" itemprop="jobTitle">Développeur</h5>
+                    <h5 class="text-muted" itemprop="jobTitle">Développeur web senior</h5>
                   </div>
 
                     <div class="detail">
@@ -515,7 +523,7 @@ h4 > .fa {
                 <li class="card-nested">
                   <div class="content has-sidebar">
                     <p class="clear-margin-sm">
-                      <strong>Software engineer</strong>,
+                      <strong>Senior software engineer</strong>,
                       <a href="https://alkemics.com" target="_blank">Alkemics</a>
                     </p>
                     <p class="text-muted">
@@ -526,7 +534,7 @@ h4 > .fa {
                     </p>
                     <p>Alkemics est une plateforme d&#x27;echange de données et de collaboration entre producteurs et distributeurs.</p>
                       <ul>
-                          <li> Stack: React, Python, Go, MySQL, Elastic Search </li>
+                          <li> Stack: React, Typescript, Python, Go, MySQL, Elastic Search </li>
                       </ul>
                   </div>
 
